Final GROUP MVP Complete

--- a/Anim8_Avenue/client/index.html
+++ b/Anim8_Avenue/client/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="shortcut icon" href="./src/assets/images/weblogo.png" type="image/png">
     <title>Anim8Ave</title>
   </head>
   <body>
